Fix about past gdc layout issue

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -118,6 +118,14 @@
   .featured_speakers .container {
     grid-template-columns: auto auto;
   }
+  .past-gdc .gdc-container {
+    flex-direction: row;
+    width: calc(768px - 2%);
+  }
+  .past-gdc .GDC-2022,
+  .past-gdc .GDC-2021 {
+    margin: 5% 2%;
+  }
 }
 
 @media all and (min-width: 1340px) {
@@ -139,15 +147,11 @@
   /* ----past GDC---- */
   .past-gdc .gdc-container {
     flex-direction: row;
-
-    /* justify-content: space-between; */
     width: 1100px;
   }
 
   .past-gdc .GDC-2022,
   .past-gdc .GDC-2021 {
     margin: 5% 2%;
-
-    /* width: 500px; */
   }
 }
